# Solnithrum

./: .gitignore  Cargo.toml  README.md
Solnithrum/: Cargo.toml  Dioxus.toml
Solnithrum/src/: app.rs
Solnithrum/src-tauri/: Cargo.toml  tauri.conf.json
Solnithrum/src-tauri/src/: main.rs
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  README.md  index.html  styles.css
frontend/src/: app.rs
solnithrum/: LICENSE-MIT  index.scss
src/: main.rs
