[package]
name = "solnithrum"
version = "0.1.0"
edition = "2021"
description = "Decentralized Solana crypto wallet made in Rust for safety."
readme = "README.md"
repository = "https://github.com/had2020/Solnithrum"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
